--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "ref-binder",
-  "version": "0.0.0",
-  "description": "ERROR: No README.md file found!",
+  "version": "0.0.1",
+  "description": "manage relationships between event emitting objects",
   "main": "ref_binder.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"no can haz tests.\" && exit 1"
+  },
+  "dependencies": {
+    "amdefine": ">=0.0.2"  
   },
   "repository": "",
   "author": "tedsuo",
